--- a/user/config/userTheme.scss
+++ b/user/config/userTheme.scss
@@ -3,6 +3,6 @@
 // Don't forget the maintain level of structure for variables
 
 :root {
-  --qwer-bg-color: #e1e3dd;
-  --qwer-text-color: black;
+  --qwer-bg-color: #fff;
+  --qwer-text-color: #000;
 }
