New Blog and Site Updates

--- a/src/lib/styles/defaultTheme.scss
+++ b/src/lib/styles/defaultTheme.scss
@@ -82,7 +82,7 @@
 
   .prose {
     --qwer-strong-font-weight: 900;
-    --qwer-strong-color: green;
+    --qwer-strong-color: #fff;
     --qwer-table-th-color: #00000030;
     --qwer-table-tr-color-odd: #6a6a6a10;
     --qwer-table-tr-color-even: #6a6a6a50;
@@ -195,7 +195,7 @@
 
   .prose {
     --qwer-strong-font-weight: 900;
-    --qwer-strong-color: green;
+    --qwer-strong-color: #fff;
     --qwer-table-th-color: #00000030;
     --qwer-table-tr-color-odd: #6a6a6a10;
     --qwer-table-tr-color-even: #6a6a6a50;
